--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     <h2>Login</h2>
     {% if error %}<p style="color:red;">{{ error }}</p>{% endif %}
     <form method="post">
-      <label>Uusario:</label><input name="username" type="text"><br>
+      <label>Usario:</label><input name="username" type="text"><br>
       <label>Password:</label><input name="password" type="password"><br>
       <button type="submit">Login</button>
     </form>
