Added support to Spanish/English

--- a/templates/success.html
+++ b/templates/success.html
@@ -1,8 +1,13 @@
 <!doctype html>
 <html>
-<head><title>Success</title></head>
+
+<head>
+  <title>Success</title>
+</head>
+
 <body>
-  <h2>¡Evaluación enviada con éxito!</h2>
-  <a href="{{ url_for('logout') }}">Salir</a>
+  <h2>Evaluación enviada/Evaluation submitted</h2>
+  <a href="{{ url_for('logout') }}">Logout</a>
 </body>
+
 </html>
