--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,21 @@
 <!doctype html>
 <html>
+
 <head>
   <title>Login</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
+
 <body>
   <div class="container">
     <h2>Login</h2>
     {% if error %}<p style="color:red;">{{ error }}</p>{% endif %}
     <form method="post">
-      <label>Usuario:</label><input name="username" type="text"><br>
+      <label>Usuario/User:</label><input name="username" type="text"><br>
       <label>Password:</label><input name="password" type="password"><br>
       <button type="submit">Login</button>
     </form>
   </div>
 </body>
+
 </html>
